recursion.hanoi.InterleavedHanoi.scala.error
Erreur de compilation :
InterleavedHanoi:8: error: not found: value hanoi
    hanoi(height-1, src1, dst, other)
    ^InterleavedHanoi:10: error: not found: value hanoi
    hanoi(height-1, src2, dst, src1)
    ^InterleavedHanoi:12: error: not found: value sr2
    interleavedHanoi(height-1, other, src1, sr2, dst)
                                            ^