recursion.hanoi.InterleavedHanoi.scala.code
def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
 if(height == 1)
  {
  	move(src1, dst)
  	move(src2, dst)
  }else{
    hanoi(height-1, src1, dst, other)
    move(src1, dst)
    hanoi(height-1, src2, dst, src1)
    move(src2, dst)
    interleavedHanoi(height-1, other, src1, sr2, dst)
  }
}